debug_output.log
Setting up the Unichain Sepolia RPC URL with your Alchemy endpoint...
Starting Anvil with Unichain Sepolia fork...


                             _   _
                            (_) | |
      __ _   _ __   __   __  _  | |
     / _` | | '_ \  \ \ / / | | | |
    | (_| | | | | |  \ V /  | | | |
     \__,_| |_| |_|   \_/   |_| |_|

    0.3.0 (5a8bd89 2024-12-20T08:45:53.195623000Z)
    https://github.com/foundry-rs/foundry

Available Accounts
==================

(0) 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266 (10000.000000000000000000 ETH)
(1) 0x70997970C51812dc3A010C7d01b50e0d17dc79C8 (10000.000000000000000000 ETH)
(2) 0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC (10000.000000000000000000 ETH)
(3) 0x90F79bf6EB2c4f870365E785982E1f101E93b906 (10000.000000000000000000 ETH)
(4) 0x15d34AAf54267DB7D7c367839AAf71A00a2C6A65 (10000.000000000000000000 ETH)
(5) 0x9965507D1a55bcC2695C58ba16FB37d819B0A4dc (10000.000000000000000000 ETH)
(6) 0x976EA74026E726554dB657fA54763abd0C3a0aa9 (10000.000000000000000000 ETH)
(7) 0x14dC79964da2C08b23698B3D3cc7Ca32193d9955 (10000.000000000000000000 ETH)
(8) 0x23618e81E3f5cdF7f54C3d65f7FBc0aBf5B21E8f (10000.000000000000000000 ETH)
(9) 0xa0Ee7A142d267C1f36714E4a8F75612F20a79720 (10000.000000000000000000 ETH)

Private Keys
==================

(0) 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80
(1) 0x59c6995e998f97a5a0044966f0945389dc9e86dae88c7a8412f4603b6b78690d
(2) 0x5de4111afa1a4b94908f83103eb1f1706367c2e68ca870fc3fb9a804cdab365a
(3) 0x7c852118294e51e653712a81e05800f419141751be58f605c371e15141b007a6
(4) 0x47e179ec197488593b187f80a00eb0da91f1b9d0b13f8733639f19c30a34926a
(5) 0x8b3a350cf5c34c9194ca85829a2df0ec3153be0318b5e2d3348e872092edffba
(6) 0x92db14e403b83dfe3df233f83dfa3a0d7096f21ca9b0d6d6b8d88b2b4ec1564e
(7) 0x4bbbf85ce3377467afe5d46f804f221813b2bb87f24d81f60f1fcdbf7cbf4356
(8) 0xdbda1821b80551c9d65939329250298aa3472ba22feea921c0cf5d620ea67b97
(9) 0x2a871d0798f97d79848a013d4936a73bf4cc922c825d33c1cf7073dff6d409c6

Wallet
==================
Mnemonic:          test test test test test test test test test test test junk
Derivation path:   m/44'/60'/0'/0/


Fork
==================
Endpoint:       https://unichain-sepolia.g.alchemy.com/v2/nYykdtexeRSvppEIGC1b8YJ2BEuO71oz
Block number:   15395685
Block hash:     0x766bbd5157f94fcdaed650810771359825d4389c2c48c4b520765cbe76bf748b
Chain ID:       1301

Base Fee
==================

252

Gas Limit
==================

30000000

Genesis Timestamp
==================

1742248115

Listening on 127.0.0.1:8545
Running Phase 1 test...
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x00B036B58a818B1BC34d502D3fE730Db729e62AC". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x00B036B58a818B1BC34d502D3fE730Db729e62AC". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> test/FullRangeE2ETest.t.sol:69:61:
   |
69 |     address public constant UNICHAIN_SEPOLIA_POOL_MANAGER = 0x00b036b58a818b1bc34d502d3fe730db729e62ac;
   |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xf70536B3bcC1bD1a972dc186A2cf84cC6da6Be5D". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xf70536B3bcC1bD1a972dc186A2cf84cC6da6Be5D". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> test/FullRangeE2ETest.t.sol:70:65:
   |
70 |     address public constant UNICHAIN_SEPOLIA_UNIVERSAL_ROUTER = 0xf70536b3bcc1bd1a972dc186a2cf84cc6da6be5d;
   |                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xf969Aee60879C54bAAed9F3eD26147Db216Fd664". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xf969Aee60879C54bAAed9F3eD26147Db216Fd664". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> test/FullRangeE2ETest.t.sol:71:65:
   |
71 |     address public constant UNICHAIN_SEPOLIA_POSITION_MANAGER = 0xf969aee60879c54baaed9f3ed26147db216fd664;
   |                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xc199F1072a74D4e905ABa1A84d9a45E2546B6222". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xc199F1072a74D4e905ABa1A84d9a45E2546B6222". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> test/FullRangeE2ETest.t.sol:72:59:
   |
72 |     address public constant UNICHAIN_SEPOLIA_STATE_VIEW = 0xc199f1072a74d4e905aba1a84d9a45e2546b6222;
   |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x56DCD40A3F2d466F48e7F48bDBE5Cc9B92Ae4472". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x56DCD40A3F2d466F48e7F48bDBE5Cc9B92Ae4472". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> test/FullRangeE2ETest.t.sol:73:55:
   |
73 |     address public constant UNICHAIN_SEPOLIA_QUOTER = 0x56dcd40a3f2d466f48e7f48bdbe5cc9b92ae4472;
   |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x9140a78c1A137c7fF1c151EC8231272aF78a99A4". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x9140a78c1A137c7fF1c151EC8231272aF78a99A4". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> test/FullRangeE2ETest.t.sol:74:63:
   |
74 |     address public constant UNICHAIN_SEPOLIA_POOL_SWAP_TEST = 0x9140a78c1a137c7ff1c151ec8231272af78a99a4;
   |                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x5fa728C0A5cfd51BEe4B060773f50554c0C8A7AB". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x5fa728C0A5cfd51BEe4B060773f50554c0C8A7AB". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> test/FullRangeE2ETest.t.sol:75:75:
   |
75 |     address public constant UNICHAIN_SEPOLIA_POOL_MODIFY_LIQUIDITY_TEST = 0x5fa728c0a5cfd51bee4b060773f50554c0c8a7ab;
   |                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Compilation failed
Test completed, Anvil process terminated.
